k8s/pruebas-cni/nginx.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-test
  namespace: pruebas-cni
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nginx-test
  template:
    metadata:
      labels:
        app: nginx-test
    spec:
      containers:
        - name: nginx
          image: nginx:latest
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-test-svc
  namespace: pruebas-cni
spec:
  selector:
    app: nginx-test
  ports:
    - port: 80
      targetPort: 80
      name: http
